--- a/styles/scss/globals.scss
+++ b/styles/scss/globals.scss
@@ -69,8 +69,9 @@ input.clockIcon::-webkit-calendar-picker-indicator {
 
 .CProgress {
   div[role="progressbar"] {
-    background: #5b30f9;
+    background: #1e16c1;
   }
+  border: 1px solid #1e16c1 !important;
 }
 
 video {
